--- a/.gitmodules
+++ b/.gitmodules
@@ -1,30 +1,33 @@
-[submodule "vim-files/vim/bundle/nerdtree"]
-	path = vim-files/vim/bundle/nerdtree
-	url = https://github.com/scrooloose/nerdtree.git
-[submodule "vim-files/vim/bundle/simple-pairs"]
-	path = vim-files/vim/bundle/simple-pairs
-	url = https://github.com/vim-scripts/simple-pairs.git
-[submodule "vim-files/vim/bundle/minibufexpl"]
-	path = vim-files/vim/bundle/minibufexpl
-	url = https://github.com/fholgado/minibufexpl.vim.git
-[submodule "vim-files/vim/bundle/nerdcommenter"]
-	path = vim-files/vim/bundle/nerdcommenter
-	url = https://github.com/scrooloose/nerdcommenter.git
-[submodule "vim-files/vim/bundle/rope"]
-	path = vim-files/vim/bundle/rope
-	url = git://github.com/klen/rope-vim.git
-[submodule "vim-files/vim/bundle/snipmate"]
-	path = vim-files/vim/bundle/snipmate
-	url = https://github.com/msanders/snipmate.vim.git
+[submodule "vim-files/vim/bundle/vim-rails"]
+	path = vim-files/vim/bundle/vim-rails
+	url = https://github.com/tpope/vim-rails.git
+[submodule "vim-files/vim/bundle/mru"]
+	path = vim-files/vim/bundle/mru
+	url = git://github.com/vim-scripts/mru.vim.git
 [submodule "vim-files/vim/bundle/syntastic"]
 	path = vim-files/vim/bundle/syntastic
-	url = https://github.com/scrooloose/syntastic.git
-[submodule "vim-files/vim/bundle/tagbar"]
-	path = vim-files/vim/bundle/tagbar
-	url = https://github.com/majutsushi/tagbar.git
-[submodule "vim-files/vim/bundle/fugitive"]
-	path = vim-files/vim/bundle/fugitive
-	url = https://github.com/tpope/vim-fugitive.git
-[submodule "vim-files/vim/bundle/command-t"]
-	path = vim-files/vim/bundle/command-t
-	url = git://git.wincent.com/command-t.git
+	url = git://github.com/scrooloose/syntastic.git
+[submodule "vim-files/vim/bundle/AutoComlPop"]
+	path = vim-files/vim/bundle/AutoComlPop
+	url = git://github.com/vim-scripts/AutoComplPop.git
+[submodule "vim-files/vim/bundle/vim-web-indent"]
+	path = vim-files/vim/bundle/vim-web-indent
+	url = git://github.com/greatghoul/vim-web-indent.git
+[submodule "vim-files/vim/bundle/vim-coffee-script"]
+	path = vim-files/vim/bundle/vim-coffee-script
+	url = git://github.com/kchmck/vim-coffee-script.git
+[submodule "vim-files/vim/bundle/vim-easymotion"]
+	path = vim-files/vim/bundle/vim-easymotion
+	url = git://github.com/Lokaltog/vim-easymotion.git
+[submodule "vim-files/vim/bundle/colors-solarized"]
+	path = vim-files/vim/bundle/colors-solarized
+	url = git://github.com/altercation/vim-colors-solarized.git
+[submodule "vim-files/vim/bundle/VST"]
+	path = vim-files/vim/bundle/VST
+	url = git://github.com/vim-scripts/VST.git
+[submodule "vim-files/vim/vim-pathogen"]
+	path = vim-files/vim/vim-pathogen
+	url = git://github.com/tpope/vim-pathogen.git
+[submodule "vim-files/vim/bundle/vim-slim"]
+	path = vim-files/vim/bundle/vim-slim
+	url = https://github.com/slim-template/vim-slim.git
